Updated backend without logs with all testcases