@@ -1,4 +1,3 @@
-/*
 package com.bootcamp.customer.Onboarding.service;
 
 
@@ -16,16 +15,17 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.util.Arrays;
 import java.util.Date;
-import java.util.List;
 import java.util.Optional;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
-public class UserPlansServiceTest {
+class UserPlansServiceTest {
+
 
     @Mock
     private UserPlansRepository userPlansRepository;
@@ -42,100 +42,125 @@ public class UserPlansServiceTest {
     @InjectMocks
     private UserPlansService userPlansService;
 
+    private User user;
+    private Plans plan;
+    private UserPlans userPlans;
+
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         MockitoAnnotations.openMocks(this);
+        user = new User();
+        user.setUserId(1L);
+        user.setUsername("John Doe");
+
+        plan = new Plans();
+        plan.setPlan_id(1L);
+        plan.setPlan_name("Basic Plan");
+        plan.setValidity_days(30);
+
+        userPlans = new UserPlans();
+        userPlans.setUser(user);
+        userPlans.setPlan(plan);
+        userPlans.setActivation_date(new Date());
+        userPlans.setExpiration_date(new Date(System.currentTimeMillis() + (plan.getValidity_days() * 24 * 60 * 60 * 1000L)));
     }
 
     @Test
-    void testAddPlansToUser() {
-        Long userId = 1L;
-        List<Long> planIds = List.of(1L, 2L);
-        User user = new User();
-        Plans plan1 = new Plans();
-        Plans plan2 = new Plans();
+    public void testAddPlansToUser_Success() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(plansRepository.findById(1L)).thenReturn(Optional.of(plan));
+        when(userPlansRepository.save(any(UserPlans.class))).thenReturn(userPlans);
 
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(plansRepository.findById(1L)).thenReturn(Optional.of(plan1));
-        when(plansRepository.findById(2L)).thenReturn(Optional.of(plan2));
+        List<Long> planIds = Arrays.asList(1L);
+        userPlansService.addPlansToUser(1L, planIds);
 
-        userPlansService.addPlansToUser(userId, planIds);
-
-        verify(userPlansRepository, times(2)).save(any(UserPlans.class));
+        verify(userPlansRepository, times(1)).save(any(UserPlans.class));
     }
 
     @Test
-    void testAddPlanToUser() {
-        Long userId = 1L;
-        Long planId = 1L;
-        User user = new User();
-        Plans plan = new Plans();
+    public void testAddPlansToUser_UserNotFound() {
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(plansRepository.findById(planId)).thenReturn(Optional.of(plan));
-
-        userPlansService.addPlanToUser(userId, planId);
-
-        verify(userPlansRepository).save(any(UserPlans.class));
-        verify(notificationService).createNotification(userId, planId);
-    }
-
-    @Test
-    void testGetUserPlans() {
-        Long userId = 1L;
-        User user = new User();
-        UserPlans userPlans = new UserPlans();
-
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(userPlansRepository.findByUser(user)).thenReturn(userPlans);
-
-        UserPlans result = userPlansService.getUserPlans(userId);
-
-        assertEquals(userPlans, result);
-    }
-
-    @Test
-    void testAddPlansToUser_UserNotFound() {
-        Long userId = 1L;
-        List<Long> planIds = List.of(1L, 2L);
-
-        when(userRepository.findById(userId)).thenReturn(Optional.empty());
-
-        RuntimeException thrown = assertThrows(RuntimeException.class, () -> {
-            userPlansService.addPlansToUser(userId, planIds);
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            userPlansService.addPlansToUser(1L, Arrays.asList(1L));
         });
-
-        assertEquals("User Not Found", thrown.getMessage());
+        assertEquals("User Not Found", exception.getMessage());
     }
 
     @Test
-    void testAddPlanToUser_UserNotFound() {
-        Long userId = 1L;
-        Long planId = 1L;
+    public void testAddPlansToUser_PlanNotFound() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(plansRepository.findById(1L)).thenReturn(Optional.empty());
 
-        when(userRepository.findById(userId)).thenReturn(Optional.empty());
-
-        RuntimeException thrown = assertThrows(RuntimeException.class, () -> {
-            userPlansService.addPlanToUser(userId, planId);
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            userPlansService.addPlansToUser(1L, Arrays.asList(1L));
         });
-
-        assertEquals("User Not Found", thrown.getMessage());
+        assertEquals("Plan not found", exception.getMessage());
     }
 
     @Test
-    void testAddPlanToUser_PlanNotFound() {
-        Long userId = 1L;
-        Long planId = 1L;
-        User user = new User();
+    public void testAddPlanToUser_Success() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(plansRepository.findById(1L)).thenReturn(Optional.of(plan));
+        when(userPlansRepository.findPlanIdsByUserId(1L)).thenReturn(Arrays.asList());
+        when(userPlansRepository.save(any(UserPlans.class))).thenReturn(userPlans);
 
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(plansRepository.findById(planId)).thenReturn(Optional.empty());
+        boolean result = userPlansService.addPlanToUser(1L, 1L);
 
-        RuntimeException thrown = assertThrows(RuntimeException.class, () -> {
-            userPlansService.addPlanToUser(userId, planId);
+        assertTrue(result);
+        verify(notificationService).createNotification(1L, 1L);
+    }
+
+    @Test
+    public void testAddPlanToUser_UserNotFound() {
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            userPlansService.addPlanToUser(1L, 1L);
         });
+        assertEquals("User Not Found", exception.getMessage());
+    }
 
-        assertEquals("Plan not found", thrown.getMessage());
+    @Test
+    public void testAddPlanToUser_PlanNotFound() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(plansRepository.findById(1L)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            userPlansService.addPlanToUser(1L, 1L);
+        });
+        assertEquals("Plan not found", exception.getMessage());
+    }
+
+    @Test
+    public void testAddPlanToUser_AlreadyExists() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(plansRepository.findById(1L)).thenReturn(Optional.of(plan));
+        when(userPlansRepository.findPlanIdsByUserId(1L)).thenReturn(Arrays.asList(1L));
+
+        boolean result = userPlansService.addPlanToUser(1L, 1L);
+
+        assertFalse(result);
+    }
+
+    @Test
+    public void testGetUserPlans_Success() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(userPlansRepository.findByUser(user)).thenReturn(Optional.of(userPlans));
+
+        Optional<UserPlans> result = userPlansService.getUserPlans(1L);
+
+        assertTrue(result.isPresent());
+        assertEquals(userPlans, result.get());
+    }
+
+    @Test
+    public void testGetUserPlans_UserNotFound() {
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            userPlansService.getUserPlans(1L);
+        });
+        assertEquals("User Not Found", exception.getMessage());
     }
 }
-*/
